[package]
name = "Money"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.7", features = ["derive"] }
itertools = "0.11.0"
rust_decimal = "1.32.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
tabwriter = "1.3.0"
